@@ -1,6 +1,7 @@
-2008-11-24  Marcus Krause   <marcus#exp2008@t3sec.info>
+2008-11-26  Marcus Krause   <marcus#exp2008@t3sec.info>
 
-	* Commenting XCLASS for felogin out
+	* Feature: extend update functionality to be_users records also
+	* Commenting out XCLASS for sysext felogin
 
 2008-11-24  Marcus Krause   <marcus#exp2008@t3sec.info>
 
